cluster/apps/iot/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/component: dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: esphome
