cluster/apps/iot/esphome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: esphome
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://esphome-adm.${CLUSTER_DOMAIN}"
    gethomepage.dev/group: IoT
    gethomepage.dev/name: ESPHome
    gethomepage.dev/icon: esphome.png
    gethomepage.dev/description: ESP device manager
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
  hostnames:
    - "esphome-adm.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: ExternalAuth
          externalAuth:
            backendRef:
              group: ""
              kind: Service
              name: authelia
              namespace: authelia
              port: 80
            protocol: HTTP
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - cookie
                - authorization
                - x-forwarded-proto
                - x-forwarded-host
                - x-forwarded-uri
                - x-forwarded-for
                - accept
              allowedResponseHeaders:
                - remote-user
                - remote-groups
                - remote-name
                - remote-email
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: esphome
          port: 80
